# ComfyUI_Blender_toolbox

./: .gitignore  AUTO_RIGGER_PLAN.md  LICENSE  README.md  __init__.py  check_export.py  check_ops.py  debug_notes.txt  geekatplay_keystore.enc  generate_workflow.py  install.bat  pyproject.toml  requirements.txt  test_distortion.py
blender_scripts/: README_BLENDER.txt  auto_rigger_cli.py  blender_toolbox_addon.py  clean_and_rig.py  comfyui_360_hdri_addon.py  simple_listener.py
docs/: EXTERNAL_RIGGING_PLAN.md
installer/: install.py  install_gemini.bat  install_gemini_studio.py  install_pbr_extractor.bat  install_pbr_extractor.py
js/: geekatplay_key_manager.js  geekatplay_toolbox.js
nodes/: __init__.py  blender_nodes.py  flux_terrain_nodes.py  geekatplay_key_manager.py  geekatplay_nodes.py  geekatplay_toolbox.py  gemini_nodes.py  geometry_ops.py  hdri_nodes.py  hitem3d_nodes.py  meshy_nodes.py  ollama_nodes.py  pbr_nodes.py  seamless_nodes.py  texture_nodes.py  tripo_nodes.py  utils_blender.py
tests/: test_geometry.py  test_socket_connection.py
tools/: generate_workflow.py
workflows/: Geekatplay_Blender_RoundTrip_Simple.json  Geekatplay_Blender_RoundTrip_Sync.json  Geekatplay_Flux2_Heightmap_Generator.json  Geekatplay_Flux_360_HDRI.json  Geekatplay_Flux_360_HDRI_Updated.json  Geekatplay_Heightmap_To_Blender.json  Geekatplay_HiTem3D_Workflow.json  Geekatplay_Hunyuan3d_v2.1.json  Geekatplay_Meshy_3D_Workflow.json  Geekatplay_PBR_Texture_Studio_workflow.json  Geekatplay_SDXL_360_HDRI.json  Geekatplay_Toolbox_Test.json  Geekatplay_Tripo_3D_Workflow.json  (+8 more)
