[project]
name = "comfyui-blender-toolbox"
description = "A complete toolbox for 3D Gen, HDRI, PBR, and Blender synchronization in ComfyUI."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = [
    "imageio[ffmpeg]",
    "imageio[freeimage]",
    "numpy",
    "requests",
    "pillow",
    "trimesh",
    "scipy"
]

[project.urls]
Repository = "https://github.com/GeekatplayStudio/ComfyUI_Blender_toolbox"

[tool.comfy]
PublisherId = "GeekatplayStudio"
DisplayName = "ComfyUI Blender Toolbox"
Icon = ""
